--- a/tempoStyle.css
+++ b/tempoStyle.css
@@ -1,13 +1,15 @@
-button {
-    height: 30px;
-    width: 30px;
-    outline: none;
-    margin: 10px;
-    border: none;
-    border-radius: 2px;
+button#submitChange {
+    background-color: rgb(124, 36, 211);
+    color: white;
+    border: 2px solid hsl(270, 80, 80);
+    border-radius: 5px;
+    padding: 8px 8px;
 }
 
-button.current {
-    box-shadow: 0 0 0 2px white,
-                0 0 0 4px black;
+button#submitChange:hover {
+    background-color: rgb(143, 98, 189);
+    color: rgb(255, 167, 251);
+    border: 2px solid rgb(158, 101, 214);
+    border-radius: 5px;
+    padding: 8px 8px;
 }
