--- a/tempoStyle.css
+++ b/tempoStyle.css
@@ -1,15 +1,40 @@
+html {
+    border-radius: 15px;
+}
+
+.wrapper {
+    padding: 0px 10px;
+}
+
+h2 {
+    text-align: center;
+}
+
+table p {
+    font-weight: 700;
+    margin-right: 10px;
+}
+
+table input {
+    height: 20px;
+    width: 60px;
+    padding: 0px 15px;
+    font-weight: 700;
+    color: rgb(124, 36, 211);
+}
+
 button#submitChange {
     background-color: rgb(124, 36, 211);
     color: white;
-    border: 2px solid hsl(270, 80, 80);
-    border-radius: 5px;
+    border: 1px solid rgb(214 154 229);    border-radius: 5px;
     padding: 8px 8px;
+    margin: 10px auto;
 }
 
 button#submitChange:hover {
     background-color: rgb(143, 98, 189);
     color: rgb(255, 167, 251);
-    border: 2px solid rgb(158, 101, 214);
+    border: 1px solid rgb(158, 101, 214);
     border-radius: 5px;
     padding: 8px 8px;
 }
